--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -194,30 +194,47 @@ jobs:
     with:
       version: ${{ needs.get-playwright-version.outputs.version }}
 
-  regenerate-snapshots:
+  should-regenerate-snapshots:
     if: |
       !cancelled() && (
         needs.test-showcase-angular.result == 'failure' ||
         needs.test-showcase-react.result == 'failure' ||
         needs.test-showcase-vue.result == 'failure' ||
+        needs.test-showcase-stencil.result == 'failure' ||
         needs.test-showcase-angular.outputs.aria-snapshots-changed == 'true' ||
         needs.test-showcase-angular.outputs.visual-snapshots-changed == 'true' ||
         needs.test-showcase-react.outputs.aria-snapshots-changed == 'true' ||
         needs.test-showcase-react.outputs.visual-snapshots-changed == 'true' ||
         needs.test-showcase-vue.outputs.aria-snapshots-changed == 'true' ||
-        needs.test-showcase-vue.outputs.visual-snapshots-changed == 'true'
+        needs.test-showcase-vue.outputs.visual-snapshots-changed == 'true' ||
+        needs.test-showcase-stencil.outputs.aria-snapshots-changed == 'true' ||
+        needs.test-showcase-stencil.outputs.visual-snapshots-changed == 'true'
       )
-    uses: ./.github/workflows/02-e2e-regenerate.yml
-    with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
-      type: showcases
     needs:
       [
         test-showcase-angular,
         test-showcase-react,
         test-showcase-vue,
+        test-showcase-stencil,
         get-playwright-version
       ]
+    runs-on: ubuntu-24.04
+    steps:
+      - name: "Fail if actor is a bot and regeneration is triggered"
+        run: |
+          if [[ "${{ github.actor }}" == *"[bot]"* ]]; then
+              exit 1
+          fi
+        shell: bash
+
+  regenerate-snapshots:
+    if: |
+      !cancelled() && needs.should-regenerate-snapshots.result == 'success'
+    uses: ./.github/workflows/02-e2e-regenerate.yml
+    with:
+      version: ${{ needs.get-playwright-version.outputs.version }}
+      type: showcases
+    needs: [should-regenerate-snapshots]
 
   commit-regenerated-snapshots:
     uses: ./.github/workflows/02-e2e-regenerated-snapshots-commit.yml
